# RenderingEngine

./: .gitignore  Architecture.txt  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  bug_report.yml  feature_request.md  feature_request.yml
Core/: material.cpp  material.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
Core/ObjectSystems/: GameObject.cpp  GameObject.h  IComponent.cpp  IComponent.h  component.cpp  component.h  object.cpp  object.h  property.h
Core/ObjectSystems/Components/: Light.cpp  Light.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
Core/Rendering/: mesh.cpp  mesh.h  shader.h
Core/UI/: ImGuiBuild.h
ObjectSystems/: GameObject.cpp  GameObject.h  IComponent.cpp  IComponent.h
ObjectSystems/Components/: Renderer.h
Rendering/: mesh.cpp  mesh.h
UI/: ImGuiBuild.cpp  ImGuiBuild.h
assets/shaders/: depthFragment.frag  depthVertex.vert  fragment.frag  fragmentLightBulb.frag  fragmentLightBulb.fs  litFragment.frag  litFragment.fs  modelVertex.vs  texture.frag  vertex.vert
assets/shaders/postProcessing/: bloomBlur.frag  composite.frag  fog.frag  invert.frag
assets/shaders/shaderLibrary/: lighting.glsl
core/: CMakeLists.txt  assimpLoader.cpp  assimpLoader.h  camera.cpp  camera.h  frameBuffer.h  material.cpp  material.h  model.cpp  model.h  property.h  scene.cpp  scene.h  sceneManager.cpp
core/ObjectSystems/: ComponentFactory.h
core/objectSystems/: GameObject.h  component.h  componentFactory.h  gameObject.cpp  object.cpp  object.h
core/objectSystems/components/: Light.cpp  Light.h  Renderer.h  Transform.h
core/rendering/: frameBuffer.cpp  frameBuffer.h  shader.h  vertex.h
core/rendering/postProcessing/: postProcessingEffectBase.cpp  postProcessingEffectBase.h  postProcessingManager.cpp  postProcessingManager.h
core/rendering/postProcessing/effects/: bloomEffect.cpp  bloomEffect.h  fogEffect.cpp  fogEffect.h  invertEffect.cpp  invertEffect.h  postProcessingEffects.h
editor/: CMakeLists.txt  editor.cpp  editor.h  inputManager.cpp  inputManager.h  panel.h
editor/panels/: heirarchyPanel.cpp  hierarchyPanel.h  inspectorPanel.cpp  inspectorPanel.h  postProcessingPanel.cpp  postProcessingPanel.h  transformPanel.cpp  transformPanel.h  viewportPanel.cpp  viewportPanel.h
